# nautilus_binance_v2

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml  nohup.out  pyproject.toml  strategies_example.py
.omc/autopilot/: spec.md
.sisyphus/evidence/: task-3-cli-help.txt  task-3-cost-metrics.txt  task-3-grids.txt  task-3-imports.txt
backup/: Dockerfile
backup/postgres/: nautilus_trader_2026-02-28_175026.dump
backup/redis/: dump_2026-02-28_175026.rdb
backup/scripts/: backup.sh
configs/: AGENTS.md  instruments.yaml
configs/accounts/: binance_futures.yaml
configs/env/: AGENTS.md  dev.yaml  phase1_small_cap.yaml  phase2_growth.yaml  prod.yaml  small_cap.yaml  stage.yaml
configs/execution/: AGENTS.md  execution.yaml
configs/monitoring/: AGENTS.md  alerts.yaml  prometheus.yml
configs/redis/: redis.conf
configs/risk/: AGENTS.md  global_risk.yaml
configs/strategies/: AGENTS.md  ema_cross.yaml  ema_pullback_atr.yaml  market_maker.yaml  micro_scalp.yaml  turtle.yaml  (+11 more)
data/: AGENTS.md
deploy/: AGENTS.md
docs/: AGENTS.md  architecture.md  go_live_checklist.md  monitoring.md  risk.md  runbook.md  strategy_200pct_blueprint_2026_03.md  turtle_backtest_4h_sensitivity.md  vegas_tunnel_rollout_2026_03.md
experiments/: AGENTS.md
scripts/: AGENTS.md  check_live_readiness.py  download_data.py  download_funding_rates.py  param_sweep.py  run_backtest.py  run_live_prod.sh  run_live_testnet_strategy.py  run_portfolio_walkforward.py  smoke_testnet.py
src/: AGENTS.md  __init__.py
tests/: AGENTS.md
(+169 files in other folders)
